# Parcoach-RMA

./: Makefile  README.md
EasyBuild_recipes/Custom_Toolchains/: classicclang.py
EasyBuild_recipes/Custom_Toolchains/compiler/: cclang.py
EasyBuild_recipes/Golden_Repo/c/CMake/: CMake-3.24.3.eb
EasyBuild_recipes/Golden_Repo/c/ClassicClang/: ClassicClang-10.0.1.eb  ClassicClang-15.0.3.eb
EasyBuild_recipes/Golden_Repo/c/ClassicFlang/: ClassicFlang-10.0.1-ClassicClang-10.0.1.eb  ClassicFlang-15.0.3-ClassicClang-15.0.3.eb
EasyBuild_recipes/Golden_Repo/l/libpgmath/: libpgmath-10.0.1-ClassicClang-10.0.1.eb  libpgmath-15.0.3-ClassicClang-15.0.3.eb
EasyBuild_recipes/Golden_Repo/o/OpenMPI-Bull/: OpenMPI-Bull-5.0.2-ClassicClang-10.0.1.eb  OpenMPI-Bull-5.0.2.eb
EasyBuild_recipes/Golden_Repo/p/PARCOACH/: PARCOACH-2.4.0-ClassicClang-15.0.3.eb
EasyBuild_recipes/Golden_Repo/p/PARCOACHRMA/: PARCOACHRMA-0.0.1-ClassicFlang-10.0.1.eb
include/: rma_analyzer.h  util.h
include/core/: interval.h  interval_list.h  interval_tree.h  notif_tree.h  uthash.h
spack_recipes/classicclang/: package.py
spack_recipes/classicflang/: package.py
spack_recipes/libpgmath/: package.py
spack_recipes/openmpibull/: package.py
spack_recipes/openmpibull-classicclang/: package.py
spack_recipes/parcoach/: package.py
spack_recipes/parcoachrma/: package.py
src/core/: interval.c  interval_avl_tree.c  interval_list.c  interval_tree.c  notif_avl_tree.c  rma_analyzer.c
src/dynamic/: rma_analyzer_mpi_c_overload.c
src/static/: CMakeLists.txt  README.md
src/static/lib/: CMakeLists.txt  rma_analyzer_load_store_overload.c  rma_analyzer_mpi_c_overload.c  rma_analyzer_mpi_fort_overload.c
src/static/src/: CMakeLists.txt  parcoach.in  parcoachBC.in  parcoachRMA.cpp  parcoachRMA.h
src/static/tests/: CMakeLists.txt  file_contains.py
src/static/tests/MPI-RMA/: CMakeLists.txt  CodeFenceCreateGetLoad.c  CodeFenceCreateGetLoad.c.expected  CodeFenceCreateGetStore.c  CodeFenceCreatePutLoad.c  CodeFenceCreatePutStore.c  CodeFenceWinAllocateGetLoad.c  CodeFenceWinAllocateGetStore.c  CodeFenceWinAllocatePutLoad.c  CodeFenceWinAllocatePutStore.c  CodeLockAllCreateGetLoad.c  CodeLockAllCreateGetStore.c  CodeLockAllCreatePutGet.c  CodeLockAllCreatePutLoad.c  CodeLockAllCreatePutPut.c  CodeLockAllWinAllocateGetLoad.c  CodeLockAllWinAllocateGetStore.c  CodeLockAllWinAllocatePutGet.c  CodeLockAllWinAllocatePutLoad.c  CodeLockAllWinAllocatePutPut.c  CodeLockCreate.c  CodeLockCreateGetLoad.c  CodeLockCreatePutGet.c  CodeLockCreatePutLoad.c  CodeLockCreatePutPut.c  CodeLockCreatePutStore.c  CodeLockCreateStoreGet.c  CodeLockWinAllocateGetLoad.c  CodeLockWinAllocateGetStore.c  CodeLockWinAllocatePutGet.c  CodeLockWinAllocatePutStore.c  CodeLockWinAllocateStoreGet.c  CodeLockWinAllocateStorePut.c  CodeTestPut.c  test_mpi.in
tests/applicative_tests/kernel_nemo/: Makefile  run_rma.sh  tra_adv_test_rma_put.F90
tests/random_patterns/: RMArand.c  RMArand2.c
tests/table_tests/: Makefile  Makefile.llvm  launch_tests.sh  launch_tests_llvm.sh
tests/table_tests/C/: Makefile  Makefile.llvm  README.md  launch_tests.sh
tests/table_tests/C/local_local/: ll_get_get_inwindow.c  ll_get_get_outwindow.c  ll_load_get_inwindow.c  ll_load_get_outwindow.c  ll_load_load_inwindow.c  ll_load_load_outwindow.c  ll_load_put_inwindow.c  ll_load_put_outwindow.c  ll_load_store_inwindow.c  ll_load_store_outwindow.c  ll_put_get_inwindow.c  ll_put_get_outwindow.c  ll_put_put_inwindow.c  ll_put_put_outwindow.c  ll_store_get_inwindow.c  ll_store_get_outwindow.c  ll_store_put_inwindow.c  ll_store_put_outwindow.c  ll_store_store_inwindow.c  ll_store_store_outwindow.c
tests/table_tests/C/remote_local/: rl_get_get.c  rl_get_load.c  rl_get_put.c  rl_get_store.c  rl_put_get.c  rl_put_load.c  rl_put_put.c  rl_put_store.c
tests/table_tests/C/remote_remote/: rr_get_get.c  rr_get_get_notify.c  rr_put_get.c  rr_put_put.c  rr_put_put_barrier.c  rr_put_put_notify.c  rr_put_put_test_notify.c
tests/table_tests/Fortran/: Makefile.llvm  README.md  launch_tests_llvm.sh
tests/table_tests/remote_local/: rl_get_load.c  rl_get_put.c  rl_get_store.c  rl_put_load.c  rl_put_store.c
tests/table_tests/remote_remote/: rr_put_get.c  rr_put_put.c
(+4 files in other folders)
